name:                haemu
version:             0.1.0.0
synopsis:            A little processor emulator
description:         An emulator for a processor written in Haskell.
homepage:            http://github.com/bennofs/haemu
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
category:            Simulation Console Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/bennofs/haemu.git

library
  exposed-modules:
      Haemu.Monad
      Haemu.Instruction
      Haemu.Types
  build-depends:
      base <5 && >3
    , mtl
    , lens
    , vector
    , primitive
    , OddWord
    , control-monad-exception
    , stateref
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite haemu-tests
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
   hs-source-dirs:   tests
   include-dirs:     src
   build-depends:
       base >3 && <5
     , haemu
     , hspec
     , lens
     , vector
     , OddWord
     , QuickCheck
     , primitive
   default-language: Haskell2010
